--- a/style.css
+++ b/style.css
@@ -1,42 +1,96 @@
+html{
+    text-align: center;
+    margin-left: 7px;
+    margin-right: 7px;
+    margin-top: 7px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 #imgTop{
-    height: 700px;
+    height: 500px;
     background: url("images/court-hammer-and-books-judgment-and-law-concept.jpg") no-repeat right top fixed;
     background-size: cover;
     text-align: center;
     background-attachment: local;
     background-position-x: left;
 }
+.divCards{
+    display: inline-flex;
+}
 #faixa{
-    background-color: blanchedalmond;
+    background-color: rgb(47, 36, 44);
     position: relative;
-    top: 300px;
+    color: white;
+    top: 150px;
     width: 60%;
-    font-size: 50px;
+    height: 50px;
+    font-size: 60px;
     display: inline-table;
+    margin-left: 500px;
+    margin: 0px;
 }
 #bottomImgTop{
     height: 60px;
     background-color: rgb(223, 134, 17);
     position: relative;
-    top: 572px;
+    top: 368px;
     opacity: 0.7;
     display: flex;
 }
 #itemMenu1{
-    width: 10%;
+    width: 13%;
     height: 60px;
     background-color: rgb(223, 134, 17);
     opacity: 0.7;
     text-decoration: none;
     color: black;
 }
+#h1Bloco2{
+    font-family: Arial, Helvetica, sans-serif;
+}
+#h2Bloco2{
+    font-family: Arial, Helvetica, sans-serif;
+}
+#bloco2{
+    margin-top: 110px;
+}
+.bloco4_1{
+    height: 400px;
+    width: 35%;
+    margin-left: 125px;
+}
+.bloco4_1_2{
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.bloco4_1_1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    margin-bottom: 0px;
+    color: rgb(223, 134, 17);;
+}
+.bloco4{
+    border: solid;
+    height: 420px;
+    width: 100%;
+    margin-top: 140px;
+    display: flex;
+    text-align: center;
+}
+.blocos4tros{
+    margin-left: 60px;
+    margin-top: 0px;
+}
 #itemMenu1:hover{
     background-color: black;
     transition: 0.4s;
     color: white;
+    border-top: solid 6px palegoldenrod;
 }
 #itemMenu2{
-    width: 10%;
+    width: 13%;
     height: 60px;
     background-color: rgb(223, 134, 17);
     opacity: 0.7;
@@ -47,9 +101,10 @@
     background-color: black;
     transition: 0.4s;
     color: white;
+    border-top: solid 6px palegoldenrod;
 }
 #itemMenu3{
-    width: 10%;
+    width: 13%;
     height: 60px;
     background-color: rgb(223, 134, 17);
     opacity: 0.7;
@@ -60,9 +115,10 @@
     background-color: black;
     transition: 0.4s;
     color: white;
+    border-top: solid 6px palegoldenrod;
 }
 #itemMenu4{
-    width: 10%;
+    width: 13%;
     height: 60px;
     background-color: rgb(223, 134, 17);
     opacity: 0.7;
@@ -73,19 +129,32 @@
     background-color: black;
     transition: 0.4s;
     color: white;
+    border-top: solid 6px palegoldenrod;
+}
+.itemsMenuDesktop{
+    -webkit-text-stroke-width: thick;
+    letter-spacing: 1px;
 }
 .colorboton{
     background-color: blanchedalmond;
 }
 .col{
     margin-top: 50px;
+    width: 290px;
 }
 .card-img-top{
-    background: url("images/imgTopo.jpg");
+    background: url("images/284988-P6LM3G-761.jpg");
     height: 150px;
     background-attachment: local;
-    background-position-x: left;
     background-size: cover;
+    background-repeat: round;
+}
+#divSvg{
+    display: none;
+}
+#groupBtnId{
+    height: 40px;
+    width: 100px;
 }
 @media(max-width: 500px){
     #imgTop{
@@ -108,7 +177,36 @@
         height: 60px;
         background-color: rgb(223, 134, 17);
         position: relative;
-        top: 190px;
+        top: 208px;
         opacity: 0.7;
+    }
+    .itemsMenuDesktop{
+        display: none;
+    }
+    #divSvg{
+        width: 100%;
+        height: 60px;
+        display: block;
+    }
+    #svgIconMenu{
+        float: right;
+        border: solid 2px;
+        border-radius: 5px;
+        margin-right: 15px;
+        margin-top: 15px;
+        cursor: pointer;
+    }
+    #groupBtnId{
+        display: none;
+    }
+}
+@media(max-width: 1155px){
+    #bottomImgTop{
+        height: 60px;
+        background-color: rgb(223, 134, 17);
+        position: relative;
+        top: 296px;
+        opacity: 0.7;
+        display: flex;
     }
 }
